Add support for Python 3.9

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ classifier =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
     Topic :: Security
 project_urls =
     Release notes = https://github.com/PyCQA/bandit/releases
