--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -3,11 +3,12 @@ name: Build and Test Bandit
 on: [push, pull_request]
 
 jobs:
-  pylint:
+  lint:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.5]
+        tox-env: ["pylint", "pep8"]
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python ${{ matrix.python-version }}
@@ -21,27 +22,7 @@ jobs:
         pip install -r test-requirements.txt
         pip install tox
     - name: Run tox
-      run: tox -e pylint
-
-  pep8:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.5]
-    steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install -r test-requirements.txt
-        pip install tox
-    - name: Run tox
-      run: tox -e pep8
+      run: tox -e ${{ matrix.tox-env }}
 
   test:
     runs-on: ubuntu-latest
